Fixed vertical alignment on axis labels

--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -359,6 +359,7 @@ span.unit
     .axis
       .name
         text-transform capitalize
+        vertical-align middle
 
       .name, .position
         font-size 24pt
